force-app/main/default/objects/Sales_Debrief__c/Sales_Debrief__c.object-meta.xml
<CustomObject>
    <label>Sales Debrief</label>
    <nameField>
        <displayFormat>SDD-{0000}</displayFormat>
        <label>Sales Debrief Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Debriefs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>