force-app/main/default/objects/Sales_Debrief__c/fields/Add_Info_for_Surest_Membership_Est__c.field-meta.xml
<CustomField>
    <fullName>Add_Info_for_Surest_Membership_Est__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add Info for Surest Membership Est</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>