force-app/main/default/objects/Sales_Debrief__c/fields/Adv_most_important_empl_deal_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Adv_most_important_empl_deal_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adv most important empl deal - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>