force-app/main/default/objects/Sales_Debrief__c/fields/Advantage_capabilities_cost_disadvantage__c.field-meta.xml
<CustomField>
    <fullName>Advantage_capabilities_cost_disadvantage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advantage capabilities cost disadvantage</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>