force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_competitive__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_competitive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy competitive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>