force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_digital_tools_feedback__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_digital_tools_feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy digital tools feedback</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>