force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_improvements__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_improvements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy improvements</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>