force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_Model_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Model_Quoted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy Model Quoted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>