force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_most_important_employer_deal__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_most_important_employer_deal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy most important employer deal</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>