force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_Overpricing_Impact__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Overpricing_Impact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy Overpricing Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>