force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_Quantum_Accolade__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Quantum_Accolade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy Quantum Accolade</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>