force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_solution_provider__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_solution_provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy solution provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>