force-app/main/default/objects/Sales_Debrief__c/fields/Advocacy_solution_provider_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_solution_provider_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocacy solution provider Write In</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>