force-app/main/default/objects/Sales_Debrief__c/fields/Best_financial_offer_RFP_process__c.field-meta.xml
<CustomField>
    <fullName>Best_financial_offer_RFP_process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Best financial offer RFP process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>