force-app/main/default/objects/Sales_Debrief__c/fields/Best_in_Market_Deal__c.field-meta.xml
<CustomField>
    <fullName>Best_in_Market_Deal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Best in Market Deal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>