force-app/main/default/objects/Sales_Debrief__c/fields/BHS_competitive__c.field-meta.xml
<CustomField>
    <fullName>BHS_competitive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BHS competitive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>