force-app/main/default/objects/Sales_Debrief__c/fields/BHS_strongest_competitor__c.field-meta.xml
<CustomField>
    <fullName>BHS_strongest_competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BHS strongest competitor</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>