force-app/main/default/objects/Sales_Debrief__c/fields/Biggest_gap_in_consultant_understanding__c.field-meta.xml
<CustomField>
    <fullName>Biggest_gap_in_consultant_understanding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Biggest gap in consultant understanding</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>