force-app/main/default/objects/Sales_Debrief__c/fields/Broad_Open_Access_vs_Value_Bases_Access__c.field-meta.xml
<CustomField>
    <fullName>Broad_Open_Access_vs_Value_Bases_Access__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broad Open Access vs Value Bases Access</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>