force-app/main/default/objects/Sales_Debrief__c/fields/Broad_Open_Access_vs_Value_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Broad_Open_Access_vs_Value_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broad Open Access vs Value - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>