force-app/main/default/objects/Sales_Debrief__c/fields/Capabilities_Biggest_Gap_Deal__c.field-meta.xml
<CustomField>
    <fullName>Capabilities_Biggest_Gap_Deal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capabilities Biggest Gap Deal</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>