force-app/main/default/objects/Sales_Debrief__c/fields/Capabilities_Employer_deal_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Capabilities_Employer_deal_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capabilities Employer deal - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>