force-app/main/default/objects/Sales_Debrief__c/fields/Clinical_competitive__c.field-meta.xml
<CustomField>
    <fullName>Clinical_competitive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical competitive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>