force-app/main/default/objects/Sales_Debrief__c/fields/Clinical_improvements__c.field-meta.xml
<CustomField>
    <fullName>Clinical_improvements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical improvements</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>