force-app/main/default/objects/Sales_Debrief__c/fields/Clinical_Model_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Model_Quoted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Model Quoted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>