force-app/main/default/objects/Sales_Debrief__c/fields/Clinical_Overpricing_Impact__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Overpricing_Impact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Overpricing Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>