force-app/main/default/objects/Sales_Debrief__c/fields/Clinical_strongest_competitor__c.field-meta.xml
<CustomField>
    <fullName>Clinical_strongest_competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical strongest competitor</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>