force-app/main/default/objects/Sales_Debrief__c/fields/Competitive_Credits__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Credits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Credits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>