force-app/main/default/objects/Sales_Debrief__c/fields/Competitive_Fees__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Fees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>