force-app/main/default/objects/Sales_Debrief__c/fields/Competitive_Financial_guarantees__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Financial_guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Financial guarantees</label>
    <type>TextArea</type>
</CustomField>