force-app/main/default/objects/Sales_Debrief__c/fields/Competitive_Network_discounts_vs_winner__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Network_discounts_vs_winner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Network discounts vs winner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>