force-app/main/default/objects/Sales_Debrief__c/fields/Competitive_Total_Cost_of_Care_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Total_Cost_of_Care_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Total Cost of Care Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>