force-app/main/default/objects/Sales_Debrief__c/fields/Competitive_Trend_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Trend_Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive Trend Guarantees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>