force-app/main/default/objects/Sales_Debrief__c/fields/Competitors_propose_UMR_could_not_offer__c.field-meta.xml
<CustomField>
    <fullName>Competitors_propose_UMR_could_not_offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitors propose UMR could not offer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>