force-app/main/default/objects/Sales_Debrief__c/fields/Competitors_Quote_to_Retain__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Quote_to_Retain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitors Quote to Retain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>