force-app/main/default/objects/Sales_Debrief__c/fields/Competitors_rank_best_and_final_offer__c.field-meta.xml
<CustomField>
    <fullName>Competitors_rank_best_and_final_offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitors rank best and final offer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>