force-app/main/default/objects/Sales_Debrief__c/fields/Competitors_UMR_cant_offer_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Competitors_UMR_cant_offer_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitors UMR cant offer - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>