force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_Discount_position__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Discount_position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Discount position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>