force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_evaluate_comp_hidden_fees__c.field-meta.xml
<CustomField>
    <fullName>Consultant_evaluate_comp_hidden_fees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant evaluate comp hidden fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>