force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_Influence__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Influence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Influence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>