force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_meeting_RFP__c.field-meta.xml
<CustomField>
    <fullName>Consultant_meeting_RFP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant meeting RFP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>