force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_Overall_financial_offer__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Overall_financial_offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Overall financial offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>