force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_Products_and_solutions__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Products_and_solutions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Products &amp; solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>