force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_responsive__c.field-meta.xml
<CustomField>
    <fullName>Consultant_responsive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant responsive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>