force-app/main/default/objects/Sales_Debrief__c/fields/Consultant_Total_Cost_of_Care_savings__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Total_Cost_of_Care_savings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Total Cost of Care savings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>