force-app/main/default/objects/Sales_Debrief__c/fields/Cost_Overall_Explain__c.field-meta.xml
<CustomField>
    <fullName>Cost_Overall_Explain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Overall Explain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>