force-app/main/default/objects/Sales_Debrief__c/fields/Cost_Overall_Explain_Dental__c.field-meta.xml
<CustomField>
    <fullName>Cost_Overall_Explain_Dental__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Overall Explain Dental</label>
    <length>255</length>
    <type>Text</type>
</CustomField>