force-app/main/default/objects/Sales_Debrief__c/fields/Cost_Overall_Explain_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Cost_Overall_Explain_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Overall Explain Write In</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>