force-app/main/default/objects/Sales_Debrief__c/fields/Cost_Overall_Explain_Write_In_Dental__c.field-meta.xml
<CustomField>
    <fullName>Cost_Overall_Explain_Write_In_Dental__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Overall Explain Write In Dental</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>