force-app/main/default/objects/Sales_Debrief__c/fields/Critical_providers_out_of_network__c.field-meta.xml
<CustomField>
    <fullName>Critical_providers_out_of_network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Critical providers out of network</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>