force-app/main/default/objects/Sales_Debrief__c/fields/Data_to_set_up_proper_financial_strategy__c.field-meta.xml
<CustomField>
    <fullName>Data_to_set_up_proper_financial_strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data to set up proper financial strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>