force-app/main/default/objects/Sales_Debrief__c/fields/Debrief_Complete_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Debrief_Complete_Incomplete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Debrief Complete Incomplete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>