force-app/main/default/objects/Sales_Debrief__c/fields/Dental_BAFO__c.field-meta.xml
<CustomField>
    <fullName>Dental_BAFO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental BAFO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>