force-app/main/default/objects/Sales_Debrief__c/fields/Dental_Compare_to_Winner__c.field-meta.xml
<CustomField>
    <fullName>Dental_Compare_to_Winner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Compare to Winner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>