force-app/main/default/objects/Sales_Debrief__c/fields/Dental_cost_differences__c.field-meta.xml
<CustomField>
    <fullName>Dental_cost_differences__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental cost differences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>