force-app/main/default/objects/Sales_Debrief__c/fields/Dental_cost_winner__c.field-meta.xml
<CustomField>
    <fullName>Dental_cost_winner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental cost winner</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>