force-app/main/default/objects/Sales_Debrief__c/fields/Dental_credits__c.field-meta.xml
<CustomField>
    <fullName>Dental_credits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental credits</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>