force-app/main/default/objects/Sales_Debrief__c/fields/Dental_DHMO__c.field-meta.xml
<CustomField>
    <fullName>Dental_DHMO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental DHMO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>