force-app/main/default/objects/Sales_Debrief__c/fields/Dental_Employer_Credit__c.field-meta.xml
<CustomField>
    <fullName>Dental_Employer_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Employer Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>