force-app/main/default/objects/Sales_Debrief__c/fields/Dental_factors_outcome__c.field-meta.xml
<CustomField>
    <fullName>Dental_factors_outcome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental factors outcome</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>