force-app/main/default/objects/Sales_Debrief__c/fields/Dental_funding_type__c.field-meta.xml
<CustomField>
    <fullName>Dental_funding_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental funding type</label>
    <type>TextArea</type>
</CustomField>