force-app/main/default/objects/Sales_Debrief__c/fields/Dental_Implementation_Credit__c.field-meta.xml
<CustomField>
    <fullName>Dental_Implementation_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Implementation Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>