force-app/main/default/objects/Sales_Debrief__c/fields/Dental_network_match_winner__c.field-meta.xml
<CustomField>
    <fullName>Dental_network_match_winner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental network match winner</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>