force-app/main/default/objects/Sales_Debrief__c/fields/Dental_Performance_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Dental_Performance_Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Performance Guarantees</label>
    <length>10</length>
    <type>Text</type>
</CustomField>