force-app/main/default/objects/Sales_Debrief__c/fields/Dental_Top_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Dental_Top_Competitor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Top Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>