force-app/main/default/objects/Sales_Debrief__c/fields/Dental_Top_Competitor_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Dental_Top_Competitor_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Top Competitor - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>