force-app/main/default/objects/Sales_Debrief__c/fields/Different_network_solutions_comment__c.field-meta.xml
<CustomField>
    <fullName>Different_network_solutions_comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Different network solutions comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>