force-app/main/default/objects/Sales_Debrief__c/fields/Different_network_solutions_markets__c.field-meta.xml
<CustomField>
    <fullName>Different_network_solutions_markets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Different network solutions markets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>