force-app/main/default/objects/Sales_Debrief__c/fields/Distance_Covered__c.field-meta.xml
<CustomField>
    <fullName>Distance_Covered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distance Covered</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>