force-app/main/default/objects/Sales_Debrief__c/fields/Employer_goal_RFP_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Employer_goal_RFP_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer goal RFP - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>