force-app/main/default/objects/Sales_Debrief__c/fields/Employer_goal_to_achieve_via_this_RFP__c.field-meta.xml
<CustomField>
    <fullName>Employer_goal_to_achieve_via_this_RFP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer goal to achieve via this RFP</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>