force-app/main/default/objects/Sales_Debrief__c/fields/Employer_likely_to_change_administrators__c.field-meta.xml
<CustomField>
    <fullName>Employer_likely_to_change_administrators__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer likely to change administrators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>