force-app/main/default/objects/Sales_Debrief__c/fields/Feedback_on_UHC_Brand_Reputation__c.field-meta.xml
<CustomField>
    <fullName>Feedback_on_UHC_Brand_Reputation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback on UHC Brand/Reputation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>