force-app/main/default/objects/Sales_Debrief__c/fields/Feedback_overall_financial_offer__c.field-meta.xml
<CustomField>
    <fullName>Feedback_overall_financial_offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback overall financial offer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>