force-app/main/default/objects/Sales_Debrief__c/fields/Feedback_relative_to_competitors__c.field-meta.xml
<CustomField>
    <fullName>Feedback_relative_to_competitors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback relative to competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>