force-app/main/default/objects/Sales_Debrief__c/fields/Fiduciary_Responsibility_Concern__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Responsibility_Concern__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiduciary Responsibility Concern</label>
    <type>TextArea</type>
</CustomField>