force-app/main/default/objects/Sales_Debrief__c/fields/Final_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>