force-app/main/default/objects/Sales_Debrief__c/fields/Final_Platform__c.field-meta.xml
<CustomField>
    <fullName>Final_Platform__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>