force-app/main/default/objects/Sales_Debrief__c/fields/Financial_guarantees_eval_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Financial_guarantees_eval_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial guarantees eval - Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>