force-app/main/default/objects/Sales_Debrief__c/fields/Financial_guarantees_improve_offer__c.field-meta.xml
<CustomField>
    <fullName>Financial_guarantees_improve_offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial guarantees improve offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>