force-app/main/default/objects/Sales_Debrief__c/fields/Financial_guarantees_included__c.field-meta.xml
<CustomField>
    <fullName>Financial_guarantees_included__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial guarantees included</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>