force-app/main/default/objects/Sales_Debrief__c/fields/Financial_guarantees_overall_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Financial_guarantees_overall_evaluation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial guarantees overall evaluation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>