force-app/main/default/objects/Sales_Debrief__c/fields/Financial_Offer_for_Surest__c.field-meta.xml
<CustomField>
    <fullName>Financial_Offer_for_Surest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Offer for Surest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>