force-app/main/default/objects/Sales_Debrief__c/fields/Gaps_in_Total_Cost_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Gaps_in_Total_Cost_of_Care__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gaps in Total Cost of Care</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>